[gd_scene load_steps=2 format=3 uid="uid://dj0ohyur6tgl"]

[ext_resource type="Script" uid="uid://dlypc2tk788de" path="res://scenes/minigames/caesar_decrypt.gd" id="1_t761c"]

[node name="CaesarDecrypt" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2622674, 0.19789568, 0.06704598, 1)
script = ExtResource("1_t761c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 205.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="CaesarCipher" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ceasar Cipher - Encryption"

[node name="ciphertext" type="Label" parent="VBoxContainer/CaesarCipher"]
layout_mode = 0
offset_left = 1.0
offset_top = 37.0
offset_right = 192.0
offset_bottom = 60.0
text = "Hello this is the message"

[node name="SecretKey" type="Label" parent="VBoxContainer/CaesarCipher"]
layout_mode = 0
offset_top = 92.0
offset_right = 81.0
offset_bottom = 115.0
text = "Secret Key"

[node name="KeySlider" type="HSlider" parent="VBoxContainer/CaesarCipher"]
layout_mode = 0
offset_left = -2.0
offset_top = 120.0
offset_right = 203.0
offset_bottom = 136.0
max_value = 25.0
tick_count = 25
ticks_on_borders = true
ticks_position = 3

[node name="plaintext" type="Label" parent="VBoxContainer/CaesarCipher"]
layout_mode = 0
offset_left = 1.0
offset_top = 61.0
offset_right = 192.0
offset_bottom = 84.0
text = "Hello this is the message"

[node name="submitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 162.0
offset_right = 201.0
offset_bottom = 219.0
text = "Submit"

[connection signal="value_changed" from="VBoxContainer/CaesarCipher/KeySlider" to="." method="_on_key_slider_value_changed"]
[connection signal="pressed" from="submitButton" to="." method="_on_submit_button_pressed"]
